# R4

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: arch.yml  build.yml  ubuntu.yml
cmake/extra/sanitizers/: sanitize-helpers.cmake
inputs.r4/: 3d.r4  dots4.r4  hyper.r4  sphere.r4
src/r4display/: CMakeLists.txt  Image.cpp  Image.hpp  main.cpp
src/r4live/: CMakeLists.txt  array.hpp  array2d.hpp  camera.hpp  color.hpp  light.hpp  main.cu  material.hpp  matrix.hpp  new_main.cu  ray.hpp  scene.hpp  vec.hpp  vector.hpp  view.hpp  world.hpp
src/r4live/objects/: entity.hpp  entity_list.hpp  parallelepiped.hpp  parallelpiped.hpp  sphere.hpp  tetrahedron.hpp  triangle.hpp
src/ray4/: CMakeLists.txt  r4_io.c  r4_main.c  r4_vec.c
